--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="Путешествия, Россия, страна">
     <link rel="stylesheet" href="./pages/index.css">
     <title>Путешествие по России</title>
 </head>
-<body>
-<div class="page">
+<body class="page">
     <header class="header">
         <img class="header__logo" title="" src="./images/logo.svg" alt="Логотип">
         <ul class="header__row-links">
@@ -70,32 +70,108 @@
             <a class="place__website__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
         <img class="place__image" src="./images/place/place-kosa.jpg" alt="Куршская коса">
-        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+        <div class="place__paragraph">
+        <p class="place__paragraph-text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
-        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+        <p class="place__paragraph-text">На этом Калининградская область не заканчивается. Для путешественника и
             исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
             россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
             запах стального, прохладного моря.</p>
+        </div>
     </article>
 
+        <article class="place">
+            <h2 class="place__title">Кольский</h2>
+            <div class="place__website">
+                <p class="place__website__url-heading">URL</p>
+                <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            </div>
+            <img class="place__image" src="./images/place/place-kolsky.jpg" alt="Кольский">
+            <div class="place__paragraph">
+                <p class="place__paragraph-text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+                    которой на юг —
+                    тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                <p class="place__paragraph-text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
+                    фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
+                    уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной,
+                    а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с
+                    билетом
+                    в Мурманск.</p>
+            </div>
+        </article>
 
+        <article class="place">
+            <h2 class="place__title">Алтай</h2>
+            <div class="place__website">
+                <p class="place__website__url-heading">URL</p>
+                <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            </div>
+            <img class="place__image" src="./images/place/place-altai.jpg" alt="Куршская коса">
+            <div class="place__paragraph">
+                <p class="place__paragraph-text">Алтай — одно из красивейших мест в России.
+                    В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные
+                    реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних
+                    мест — горным воздухом.</p>
+                <p class="place__paragraph-text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
+                    увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
+                    орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+            </div>
+        </article>
+
+        <article class="place">
+            <h2 class="place__title">Зимний Байкал</h2>
+            <div class="place__website">
+                <p class="place__website__url-heading">URL</p>
+                <a class="place__website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            </div>
+            <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Куршская коса">
+            <div class="place__paragraph">
+                <p class="place__paragraph-text">Всем известен Байкал как крупнейшее озеро
+                    в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
+                    России.</p>
+                <p class="place__paragraph-text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+                    скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+                    к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
+                    фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+            </div>
+        </article>
+
+        <article class="place">
+            <h2 class="place__title">Карелия</h2>
+            <div class="place__website">
+                <p class="place__website__url-heading">URL</p>
+                <a class="place__website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            </div>
+            <img class="place__image" src="./images/place/place-karelia.jpg" alt="Куршская коса">
+            <div class="place__paragraph">
+                <p class="place__paragraph-text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+                    В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+                    в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                <p class="place__paragraph-text"></p>
+            </div>
+        </article>
     </section>
 
 
-
-<section class="cover">
-
-
-
-</section>
-
+    <section class="cover">
+        <a class="cover__link cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+                электричках.</p>
+        </a>
+    </section>
 
     <footer class="footer">
-
+    <ul class="footer__links">
+        <li><a class="footer__link" href="https://yandex.ru/maps" target='_blank'>Карты</a></li>
+        <li><a class="footer__link" href="https://yandex.ru/pogoda" target='_blank'>Погода</a></li>
+        <li><a class="footer__link" href="https://rasp.yandex.ru" target='_blank'>Расписание</a></li>
+        <li><a class="footer__link" href="https://calendar.yandex.ru" target='_blank'>Календарь</a></li>
+        <li><a class="footer__link" href="https://travel.yandex.ru" target='_blank'>Путешествия</a></li>
+    </ul>
+        <p class="footer__copyright">&copy; 2021. Vova Gridnev</p>
     </footer>
-
-
 
 </div>
 </body>
