--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
             <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <a class="place__website__link" href="http://park-kosa.ru" target='_blank'>park-kosa.ru</a>
         </div>
         <img class="place__image" src="./images/place/place-kosa.jpg" alt="Куршская коса">
         <div class="place__paragraph">
@@ -97,7 +97,8 @@
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
             <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
+            <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+               target='_blank'>National
                 Geographic</a>
         </div>
         <img class="place__image" src="./images/place/place-kolsky.jpg" alt="Кольский">
@@ -119,7 +120,8 @@
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
             <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+               target='_blank'>Facebook</a>
         </div>
         <img class="place__image" src="./images/place/place-altai.jpg" alt="Куршская коса">
         <div class="place__paragraph">
@@ -138,7 +140,8 @@
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
             <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <a class="place__website__link" href="https://vk.com/baikalmile"
+               target='_blank'>https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Куршская коса">
         <div class="place__paragraph">
@@ -157,7 +160,7 @@
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
             <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            <a class="place__website__link" href="http://vodlozero.ru" target='_blank'>http://vodlozero.ru/</a>
         </div>
         <img class="place__image" src="./images/place/place-karelia.jpg" alt="Куршская коса">
         <div class="place__paragraph">
@@ -168,28 +171,32 @@
                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
-            <p class="place__paragraph-text"></p>
         </div>
     </article>
 </section>
-<!--<section class="cover">-->
-<!--    <a class="cover__link cover __background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">-->
-<!--        <h2 class="cover__title">До Байкала «на собаках»</h2>-->
-<!--        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на-->
-<!--            электричках.-->
-<!--        </p>-->
-<!--    </a>-->
-<!--</section>-->
-<!--<footer class="footer">-->
-<!--    <ul class="footer__links">-->
-<!--        <li><a class="footer__link" href="https://yandex.ru/maps" target='_blank'>Карты</a></li>-->
-<!--        <li><a class="footer__link" href="https://yandex.ru/pogoda" target='_blank'>Погода</a></li>-->
-<!--        <li><a class="footer__link" href="https://rasp.yandex.ru" target='_blank'>Расписание</a></li>-->
-<!--        <li><a class="footer__link" href="https://calendar.yandex.ru" target='_blank'>Календарь</a></li>-->
-<!--        <li><a class="footer__link" href="https://travel.yandex.ru" target='_blank'>Путешествия</a></li>-->
-<!--    </ul>-->
-<!--    <p class="footer__copyright">&copy; 2021. Vova Gridnev</p>-->
-<!--</footer>-->
+<section class="cover">
+    <a class="cover__link cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.
+        </p>
+    </a>
+</section>
+<footer class="footer">
+    <ul class="footer__links">
+        <li class="footer__links-li"><a class="footer__link" href="https://yandex.ru/maps" target='_blank'>Карты</a>
+        </li>
+        <li class="footer__links-li"><a class="footer__link" href="https://yandex.ru/pogoda" target='_blank'>Погода</a>
+        </li>
+        <li class="footer__links-li"><a class="footer__link" href="https://rasp.yandex.ru"
+                                        target='_blank'>Расписание</a></li>
+        <li class="footer__links-li"><a class="footer__link" href="https://calendar.yandex.ru"
+                                        target='_blank'>Календарь</a></li>
+        <li class="footer__links-li"><a class="footer__link" href="https://travel.yandex.ru"
+                                        target='_blank'>Путешествия</a></li>
+    </ul>
+    <p class="footer__copyright">&copy; 2021. Vova Gridnev</p>
+</footer>
 </div>
 </body>
 </html>
