--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
                 достойные вашего отпуска.
             </p>
             <ul class="intro__list">
-                <li class="intro__list-text">Часовых поясов <span class="intro__list-text_span-accent"> 11</span>
+                <li class="intro__list-text">Часовых поясов <span class="intro__span-accent"> 11</span>
                 </li>
                 <li class="intro__list-text">Объектов природного наследия ЮНЕСКО <span
-                        class="intro__list-text_span-accent"> 12</span>
+                        class="intro__span-accent"> 12</span>
                 </li>
                 <li class="intro__list-text">Объектов культурного наследия ЮНЕСКО <span
-                        class="intro__list-text_span-accent"> 16</span>
+                        class="intro__span-accent"> 16</span>
                 </li>
-                <li class="intro__list-text">Природных заповедников <span class="intro__list-text_span-accent"> 105</span>
+                <li class="intro__list-text">Природных заповедников <span class="intro__span-accent"> 105</span>
                 </li>
-                <li class="intro__list-text">Аэропортов <span class="intro__list-text_span-accent"> 241</span>
+                <li class="intro__list-text">Аэропортов <span class="intro__span-accent"> 241</span>
                 </li>
             </ul>
         </div>
@@ -69,8 +69,8 @@
         <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-                <p class="place__website_url-heading">URL</p>
-                <a class="place__website_link" href="http://park-kosa.ru" target='_blank'>park-kosa.ru</a>
+                <p class="place__url-heading">URL</p>
+                <a class="place__link" href="http://park-kosa.ru" target='_blank'>park-kosa.ru</a>
             </div>
             <img class="place__image" src="./images/place/place-kosa.jpg" alt="Куршская коса">
             <div class="place__paragraph">
@@ -91,8 +91,8 @@
         <article class="place">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
-                <p class="place__website_url-heading">URL</p>
-                <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                <p class="place__url-heading">URL</p>
+                <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                    target='_blank'>National
                     Geographic</a>
             </div>
@@ -114,8 +114,8 @@
         <article class="place">
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
-                <p class="place__website_url-heading">URL</p>
-                <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                <p class="place__url-heading">URL</p>
+                <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
                    target='_blank'>Facebook</a>
             </div>
             <img class="place__image" src="./images/place/place-altai.jpg" alt="Куршская коса">
@@ -134,8 +134,8 @@
         <article class="place">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
-                <p class="place__website_url-heading">URL</p>
-                <a class="place__website_link" href="https://vk.com/baikalmile"
+                <p class="place__url-heading">URL</p>
+                <a class="place__link" href="https://vk.com/baikalmile"
                    target='_blank'>https://vk.com/baikalmile</a>
             </div>
             <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Куршская коса">
@@ -154,8 +154,8 @@
         <article class="place">
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
-                <p class="place__website_url-heading">URL</p>
-                <a class="place__website_link" href="http://vodlozero.ru" target='_blank'>http://vodlozero.ru/</a>
+                <p class="place__url-heading">URL</p>
+                <a class="place__link" href="http://vodlozero.ru" target='_blank'>http://vodlozero.ru/</a>
             </div>
             <img class="place__image" src="./images/place/place-karelia.jpg" alt="Куршская коса">
             <div class="place__paragraph">
@@ -179,19 +179,12 @@
     </section>
 </main>
 <footer class="footer">
-    <nav class="footer__nav">
-        <ul class="footer__links">
-            <li class="footer__links-li"><a class="footer__link" href="https://yandex.ru/maps" target='_blank'>Карты</a>
-            </li>
-            <li class="footer__links-li"><a class="footer__link" href="https://yandex.ru/pogoda" target='_blank'>Погода</a>
-            </li>
-            <li class="footer__links-li"><a class="footer__link" href="https://rasp.yandex.ru"
-                                            target='_blank'>Расписание</a></li>
-            <li class="footer__links-li"><a class="footer__link" href="https://calendar.yandex.ru"
-                                            target='_blank'>Календарь</a></li>
-            <li class="footer__links-li"><a class="footer__link" href="https://travel.yandex.ru"
-                                            target='_blank'>Путешествия</a></li>
-        </ul>
+    <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps" target='_blank'>Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda" target='_blank'>Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru" target='_blank'>Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru" target='_blank'>Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru" target='_blank'>Путешествия</a>
     </nav>
     <p class="footer__copyright">&copy; 2021. Vova Gridnev</p>
 </footer>
