--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <header class="header">
     <img class="header__logo" title="" src="./images/logo.svg" alt="Логотип">
     <ul class="header__row-links">
-        <li><a class="header__lang-link header__lang-link_selected" href="">Ru</a></li>
-        <li><a class="header__lang-link">En</a></li>
+        <li><a class="header__lang-link header__lang-link_selected" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
     </ul>
 </header>
 <main class="content">
     <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <div class="lead__container">
+        <figure class="lead__container">
             <img class="lead__image" src="images/lead/lead-polka.jpg" alt="Сон в вагоне">
-            <p class="lead__caption">ваша полка — верхняя</p>
-        </div>
+            <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
     </section>
     <section class="intro">
         <div class="intro__container">
